# multigb

./: Cargo.toml  README.md  dmgops.json  plan.md
codegen/: instructions.rs
roms/: boostrap_annotated.txt
src/: bus.rs  console.rs  cpu.rs  instruction.rs  instructions.rs  lib.rs  main.rs  old_instruction.rs  parser.rs
src/cpu/: flag.rs  flags.rs  mod.rs
src/instruction/: arg.rs  mod.rs
