[package]
name = "multigb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytesize = "1.2.0"
either = "1.8.1"
regex = "1.7.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
